[package]
name = "gust"
version = "0.1.1"
authors = ["Samuel Resendez <saresend@usc.edu>"]
description = """ A small charting library for generating d3 and html charts using Rust """
license = "Unlicense/MIT"
homepage = "https://github.com/saresend/Gust"
categories = ["graphing", "data visualization", "d3"]


[dependencies]
serde_json = "1.0"
serde_derive = "1.0.15"
serde = "1.0.15"